# MicroMatrix-RTOS

./: BUTTONS.md  CMakeLists.txt  CMakePresets.json  GUIDELINES.md  README.md  toolchain-arm-none-eabi.cmake
.github/workflows/: ci.yml
include/: board.h  buttons.h  common.h  fonts.h  matrixstate.h
linker/: STM32F051K8Tx_FLASH.ld
src/: FreeRTOSConfig.h  buttons.c  buttons.h  common.h  fonts.c  fonts.h  main.c  matrixstate.c  matrixstate.h  stm32f0xx_hal_conf.h  syscalls.c
src/apps/bitris/: bitris.c  bitris.h
src/apps/counter/: counter.c  counter.h
tools/: dockerfile
